Fixed timer jumping when selecting categories

--- a/BlisTimer/Views/Timer/Index.cshtml.css
+++ b/BlisTimer/Views/Timer/Index.cshtml.css
@@ -32,6 +32,7 @@
 
 .task {
     background: transparent;
+    height: 126px;
     font-size: 2rem;
     font-weight: 500;
     margin-bottom: auto;
